grammar.js
    program: ($) =>
      seq(optional($.shebang_line), repeat($._component)),

    _component: ($) =>
      choice(
        $.preprocessor_macro_definition,
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        $.embedded_code,
        $.probe_point_definition,
        $.probe_point_alias_prologue,
        $.probe_point_alias_epilogue,
        $.function_definition,
        $.variable_declaration
      ),

    preprocessor_macro_definition: ($) =>
      seq(
        "@define",
        field("name", $.identifier),
        optional(
          seq(
            "(",
            field("parameter", seqdel(",", $.identifier)),
            ")"
          )
        ),
        token(prec(2, "%(")),
        field(
          "body",
          optional(
            choice(
              $.conditional_preprocessing,
              $.preprocessor_tokens
            )
          )
        ),
        token(prec(2, "%)"))
      ),

    preprocessor_tokens: (_) =>
      repeat1(
        choice(
          token(prec(2, /[^%)]|[^%][)]|[%][^%(]/)),
          token(prec(2, /[%()]/))
        )
      ),

    preprocessor_macro_expansion: ($) =>
      prec.right(
        seq(
          "@",
          field(
            "name",
            token.immediate(/[$A-Z_a-z][$0-9A-Z_a-z]*/)
          ),
          optional(
            seq(
              "(",
              field("argument", seqdel(",", $._expression)),
              ")"
            )
          )
        )
      ),

    embedded_code: ($) =>
      seq(
        token(prec(2, "%{")),
        field("body", optional($.embedded_tokens)),
        token(prec(2, "%}"))
      ),

    embedded_tokens: (_) =>
      repeat1(
        choice(
          token(prec(2, /[^%}]|[^%][}]/)),
          token(prec(2, /[%}]/))
        )
      ),

    probe_point_definition: ($) =>
      seq(
        "probe",
        field("probe_point", $._probe_point_seq),
        field("body", $.statement_block)
      ),

    _probe_point_seq: ($) =>
      choice(
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        seqdel(",", $.probe_point)
      ),

    probe_point: ($) =>
      prec.right(
        seq(
          field(
            "component",
            seqdel(
              ".",
              choice(
                $.probe_point_component,
                $.probe_point_expansion
              )
            )
          ),
          optional(
            field("sufficiency_mark", $._sufficiency_mark)
          ),
          optional(field("arming_condition", $._if_clause))
        )
      ),

    probe_point_component: ($) =>
      seq(
        field("pattern", /[*A-Z_a-z][*0-9A-Z_a-z]*/),
        optional(seq("(", field("parameter", $._rvalue), ")"))
      ),

    probe_point_expansion: ($) =>
      prec.right(
        seq(
          "{",
          seqdel(
            ",",
            choice(
              $.probe_point_component,
              $.probe_point_expansion
            )
          ),
          "}"
        )
      ),

    _sufficiency_mark: (_) => choice("!", "?"),

    probe_point_alias_prologue: ($) =>
      seq(
        "probe",
        field(
          "alias",
          choice(
            $.preprocessor_macro_expansion,
            $.conditional_preprocessing,
            $.probe_point
          )
        ),
        "=",
        field("probe_point", $._probe_point_seq),
        field("body", $.statement_block),
        optional(seq(",", field("epilogue", $.statement_block)))
      ),

    probe_point_alias_epilogue: ($) =>
      seq(
        "probe",
        field(
          "alias",
          choice(
            $.preprocessor_macro_expansion,
            $.conditional_preprocessing,
            $.probe_point
          )
        ),
        "+=",
        field("probe_point", $._probe_point_seq),
        field("body", $.statement_block)
      ),

    function_definition: ($) =>
      seq(
        optional("private"),
        "function",
        choice(
          $.preprocessor_macro_expansion,
          $.conditional_preprocessing,
          seq(
            field("name", $.identifier),
            optional(seq(":", field("return_type", $.type))),
            "(",
            optional(
              choice(
                $.preprocessor_macro_expansion,
                $.conditional_preprocessing,
                field("parameter", seqdel(",", $.parameter))
              )
            ),
            ")",
            optional(seq(":", field("priority", $.literal)))
          )
        ),
        field("body", choice($.embedded_code, $.statement_block))
      ),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("type", $.type)))
      ),

    type: (_) => token(choice("long", "string")),

    variable_declaration: ($) =>
      prec.right(
        seq(
          choice("private", "global", seq("private", "global")),
          choice(
            $.preprocessor_macro_expansion,
            $.conditional_preprocessing,
            seqdel(",", $._variable_declarator)
          ),
          optional(";")
        )
      ),

    _variable_declarator: ($) =>
      choice(
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        $.identifier,
        $.init_declarator,
        $.array_declarator
      ),

    init_declarator: ($) =>
      seq(
        field("name", $.identifier),
        seq(
          "=",
          field(
            "value",
            choice(
              $.preprocessor_macro_expansion,
              $.conditional_preprocessing,
              $.embedded_code,
              $.literal
            )
          )
        )
      ),

    _statement: ($) =>
      choice(
        $.expression_statement,
        $.statement_block,
        $.null_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.foreach_statement,
        $.break_statement,
        $.continue_statement,
        $.return_statement,
        $.next_statement,
        $.try_statement,
        $.delete_statement
      ),

    expression_statement: ($) => $._rvalue,

    statement_block: ($) =>
      prec.right(seq("{", repeat($._statement), "}")),

    null_statement: (_) => ";",

    if_statement: ($) =>
      prec.right(
        seq(
          $._if_clause,
          field("consequence", $._statement),
          optional(
            seq("else", field("alternative", $._statement))
          )
        )
      ),

    _if_clause: ($) =>
      seq("if", "(", field("condition", $._rvalue), ")"),

    foreach_statement: ($) =>
      seq(
        "foreach",
        "(",
        field("declarator", $.foreach_declarator),
        "in",
        field("array", $.foreach_array),
        optional(seq("limit", field("limit", $._rvalue))),
        ")",
        field("body", $._statement)
      ),

    tuple_index: ($) =>
      seq("[", seqdel(",", choice("*", $._rvalue)), "]"),

    return_statement: ($) =>
      prec.right(
        seq("return", field("value", optional($._rvalue)))
      ),

    next_statement: (_) => prec.left("next"),

    _rvalue: ($) =>
      choice(
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        $.embedded_code,
        $._expression
      ),

    _expression: ($) =>
      choice(
        $.member_expression,
        $.subscript_expression,
        $.call_expression,
        $.context_variable_expansion,
        $.unary_expression,
        $.update_expression,
        $.binary_expression,
        $.array_in_expression,
        $.assignment_expression,
        $.ternary_expression,
        $.grouping_expression,
        $.literal,
        $.identifier
      ),

    subscript_expression: ($) =>
      prec(
        PREC.SUBSCRIPT,
        seq(
          field("argument", $._rvalue),
          field("index", $.tuple_index)
        )
      ),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("function", $._expression),
          seq(
            "(",
            optional(seqdel(",", field("argument", $._rvalue))),
            ")"
          )
        )
      ),

    unary_expression: ($) =>
      prec.left(
        PREC.UNARY,
        seq(
          field("operator", choice("!", "&", "+", "-", "~")),
          field("argument", $._rvalue)
        )
      ),

    update_expression: ($) => {
      const argument = field("argument", $._rvalue);
      const operator = field("operator", choice("++", "--"));
      return prec.right(
        PREC.UNARY,
        choice(seq(operator, argument), seq(argument, operator))
      );
    },

    binary_expression: ($) => {
      const table = [
        ["!=", PREC.EQUAL],
        ["!~", PREC.EQUAL],
        ["%", PREC.MULTIPLICATION],
        ["&", PREC.BITWISE_AND],
        ["&&", PREC.LOGICAL_AND],
        ["*", PREC.MULTIPLICATION],
        ["+", PREC.ADDITION],
        ["-", PREC.ADDITION],
        [".", PREC.ADDITION],
        ["/", PREC.MULTIPLICATION],
        ["<", PREC.RELATIONAL],
        ["<<", PREC.BITWISE_SHIFT],
        ["<=", PREC.RELATIONAL],
        ["==", PREC.EQUAL],
        ["=~", PREC.EQUAL],
        [">", PREC.RELATIONAL],
        [">=", PREC.RELATIONAL],
        [">>", PREC.BITWISE_SHIFT],
        ["^", PREC.EXCLUSIVE_OR],
        ["|", PREC.INCLUSIVE_OR],
        ["||", PREC.LOGICAL_OR],
      ];

      return choice(
        ...table.map(([operator, precedence]) => {
          return prec.left(
            precedence,
            seq(
              field("left", $._rvalue),
              field("operator", operator),
              field("right", $._rvalue)
            )
          );
        })
      );
    },

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          field("left", $._lvalue),
          field(
            "operator",
            choice(
              "%=",
              "&=",
              "*=",
              "+=",
              "-=",
              ".=",
              "/=",
              "<<=",
              "<<<",
              "=",
              ">>=",
              "^=",
              "|="
            )
          ),
          field("right", $._rvalue)
        )
      ),

    _lvalue: ($) =>
      choice(
        $.preprocessor_macro_expansion,
        $.conditional_preprocessing,
        $.identifier,
        $.subscript_expression,
        $.member_expression
      ),

    ternary_expression: ($) =>
      prec.right(
        PREC.TERNARY,
        seq(
          field("condition", $._rvalue),
          "?",
          field("consequence", optional($._rvalue)),
          ":",
          field("alternative", $._rvalue)
        )
      ),

    literal: ($) =>
      choice(
        $.concatenated_string,
        $.string,
        $.script_argument_string,
        $.script_argument_number,
        $.number
      ),

    concatenated_string: ($) =>
      prec.right(seq($.string, repeat1($.string))),

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            token.immediate(prec(1, "/*")),
            token.immediate(prec(1, /[^\\"\n]+/)),
            $.escape_sequence
          )
        ),
        '"'
      ),

    escape_sequence: (_) =>
      token(
        seq(
          "\\",
          choice(
            "a",
            "b",
            "f",
            "n",
            "r",
            "t",
            "v",
            '"',
            "\\",
            /[0-7]{1,3}/,
            /x[0-9A-Fa-f]{2,}/
          )
        )
      ),

    number: (_) => {
      const oct_literal = seq("0", repeat(/[0-7]/));
      const dec_literal = seq(/[1-9]/, repeat(/[0-9]/));
      const hex_literal = seq(
        choice("0X", "0x"),
        repeat1(/[0-9A-Fa-f]/)
      );
      return token(
        choice(oct_literal, dec_literal, hex_literal)
      );
    },

    identifier: (_) => /[$A-Z_a-z][$0-9A-Z_a-z]*/,

    shebang_line: (_) => /#!.*/,

    comment: ($) =>
      choice(
        seq(
          token(prec(1, "/*")),
          repeat(
            choice(
              token(prec(1, /[^*/]|[^*][/]/)),
              token(prec(1, /[*/]/))
            )
          ),
          token(prec(1, seq(repeat1("*"), "/")))
        ),
        token(seq(choice("#", "//"), /.*/))
      ),
  },
});

/**
 * Return a delimited sequence of zero or more instances of a rule.
 *
 * @function
 * @param {string} del
 * @param {Rule} rule
 * @returns {SeqRule}
 */
function seqdel(del, rule) {
  return seq(rule, repeat(seq(del, rule)));
}
